[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/OtomanopeeOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/LevelSquare.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/arrowRight.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/arrowLeft.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/ss1.png" type="Texture" id=5]
[ext_resource path="res://ui/LevelSelect.gd" type="Script" id=6]
[ext_resource path="res://ui/ClipControl.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 12
outline_color = Color( 1, 1, 1, 0.168627 )
extra_spacing_bottom = 20
font_data = ExtResource( 1 )

[node name="LevelSelect" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 20
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 25.0
margin_top = 20.0
margin_right = 999.0
margin_bottom = 575.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 20.0
margin_right = 999.0
margin_bottom = 575.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 974.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 1 )
text = "Level Select"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 199.0
margin_right = 974.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="BackButton" type="TextureButton" parent="VBoxContainer/HBoxContainer" groups=[
"menu_buttons",
]]
margin_right = 128.0
margin_bottom = 356.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="ClipControl" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 842.0
margin_bottom = 356.0
rect_min_size = Vector2( 710, 0 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="GridBox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/ClipControl"]
margin_right = 1424.0
margin_bottom = 350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox"]
margin_right = 710.0
margin_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 6

[node name="LevelSquare" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
locked = false

[node name="LevelSquare2" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 120.0
margin_right = 230.0
locked = false
level_num = 2

[node name="LevelSquare3" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 240.0
margin_right = 350.0
locked = false
level_num = 3

[node name="LevelSquare4" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 360.0
margin_right = 470.0

[node name="LevelSquare5" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 480.0
margin_right = 590.0

[node name="LevelSquare6" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 600.0
margin_right = 710.0

[node name="LevelSquare7" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_top = 120.0
margin_bottom = 230.0

[node name="LevelSquare8" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 120.0
margin_top = 120.0
margin_right = 230.0
margin_bottom = 230.0

[node name="LevelSquare9" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 240.0
margin_top = 120.0
margin_right = 350.0
margin_bottom = 230.0

[node name="LevelSquare10" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 120.0
margin_right = 470.0
margin_bottom = 230.0

[node name="LevelSquare11" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 480.0
margin_top = 120.0
margin_right = 590.0
margin_bottom = 230.0

[node name="LevelSquare12" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 120.0
margin_right = 710.0
margin_bottom = 230.0

[node name="LevelSquare13" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_top = 240.0
margin_bottom = 350.0

[node name="LevelSquare14" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 120.0
margin_top = 240.0
margin_right = 230.0
margin_bottom = 350.0

[node name="LevelSquare15" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 240.0
margin_top = 240.0
margin_right = 350.0
margin_bottom = 350.0

[node name="LevelSquare16" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 240.0
margin_right = 470.0
margin_bottom = 350.0

[node name="LevelSquare17" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 480.0
margin_top = 240.0
margin_right = 590.0
margin_bottom = 350.0

[node name="LevelSquare18" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer" instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 240.0
margin_right = 710.0
margin_bottom = 350.0

[node name="GridContainer2" type="GridContainer" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox"]
margin_left = 714.0
margin_right = 1424.0
margin_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 6

[node name="LevelSquare" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
level_num = 19

[node name="LevelSquare2" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 120.0
margin_right = 230.0
locked = false
level_num = 20

[node name="LevelSquare3" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 240.0
margin_right = 350.0
level_num = 3

[node name="LevelSquare4" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 360.0
margin_right = 470.0

[node name="LevelSquare5" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 480.0
margin_right = 590.0

[node name="LevelSquare6" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 600.0
margin_right = 710.0

[node name="LevelSquare7" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_top = 120.0
margin_bottom = 230.0

[node name="LevelSquare8" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 120.0
margin_top = 120.0
margin_right = 230.0
margin_bottom = 230.0

[node name="LevelSquare9" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 240.0
margin_top = 120.0
margin_right = 350.0
margin_bottom = 230.0

[node name="LevelSquare10" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 120.0
margin_right = 470.0
margin_bottom = 230.0

[node name="LevelSquare11" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 480.0
margin_top = 120.0
margin_right = 590.0
margin_bottom = 230.0

[node name="LevelSquare12" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 120.0
margin_right = 710.0
margin_bottom = 230.0

[node name="LevelSquare13" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_top = 240.0
margin_bottom = 350.0

[node name="LevelSquare14" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 120.0
margin_top = 240.0
margin_right = 230.0
margin_bottom = 350.0

[node name="LevelSquare15" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 240.0
margin_top = 240.0
margin_right = 350.0
margin_bottom = 350.0

[node name="LevelSquare16" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 240.0
margin_right = 470.0
margin_bottom = 350.0

[node name="LevelSquare17" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 480.0
margin_top = 240.0
margin_right = 590.0
margin_bottom = 350.0

[node name="LevelSquare18" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer2" instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 240.0
margin_right = 710.0
margin_bottom = 350.0

[node name="GridContainer3" type="GridContainer" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox"]
margin_left = 1428.0
margin_right = 2138.0
margin_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 6

[node name="LevelSquare" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
level_num = 37

[node name="LevelSquare2" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 120.0
margin_right = 230.0
level_num = 38

[node name="LevelSquare3" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 240.0
margin_right = 350.0
level_num = 3

[node name="LevelSquare4" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 360.0
margin_right = 470.0

[node name="LevelSquare5" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 480.0
margin_right = 590.0

[node name="LevelSquare6" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 600.0
margin_right = 710.0

[node name="LevelSquare7" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_top = 120.0
margin_bottom = 230.0

[node name="LevelSquare8" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 120.0
margin_top = 120.0
margin_right = 230.0
margin_bottom = 230.0

[node name="LevelSquare9" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 240.0
margin_top = 120.0
margin_right = 350.0
margin_bottom = 230.0

[node name="LevelSquare10" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 120.0
margin_right = 470.0
margin_bottom = 230.0

[node name="LevelSquare11" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 480.0
margin_top = 120.0
margin_right = 590.0
margin_bottom = 230.0

[node name="LevelSquare12" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 120.0
margin_right = 710.0
margin_bottom = 230.0

[node name="LevelSquare13" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_top = 240.0
margin_bottom = 350.0

[node name="LevelSquare14" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 120.0
margin_top = 240.0
margin_right = 230.0
margin_bottom = 350.0

[node name="LevelSquare15" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 240.0
margin_top = 240.0
margin_right = 350.0
margin_bottom = 350.0

[node name="LevelSquare16" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 240.0
margin_right = 470.0
margin_bottom = 350.0

[node name="LevelSquare17" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 480.0
margin_top = 240.0
margin_right = 590.0
margin_bottom = 350.0

[node name="LevelSquare18" parent="VBoxContainer/HBoxContainer/ClipControl/GridBox/GridContainer3" instance=ExtResource( 2 )]
margin_left = 600.0
margin_top = 240.0
margin_right = 710.0
margin_bottom = 350.0

[node name="NextButton" type="TextureButton" parent="VBoxContainer/HBoxContainer" groups=[
"menu_buttons",
]]
margin_left = 846.0
margin_right = 974.0
margin_bottom = 356.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
